# myemma-helper-crates

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
myemma_api_error/: Cargo.toml
myemma_api_error/src/: error_kind.rs  error_manipulation.rs  from_std.rs  lib.rs
myemma_backtrace/: Cargo.toml
myemma_backtrace/src/: lib.rs
myemma_logger/: Cargo.toml
myemma_logger/src/: lib.rs  log_filter.rs  log_format.rs
myemma_panic_hook/: Cargo.toml
myemma_panic_hook/src/: lib.rs
myemma_panic_hook/tests/: test_build.rs
myemma_rocket_launch_errors/: Cargo.toml
myemma_rocket_launch_errors/src/: lib.rs
myemma_rocket_options_fairing/: Cargo.toml
myemma_rocket_options_fairing/src/: lib.rs
