[package]
name = "myemma_api_error"
version = "0.1.0"
authors = ["Team Ferris <team_ferris@snelstart.nl>"]
license = "MIT OR Apache-2.0"
homepage = "https://myemma.io/"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rand = "0.8.5"