[package]
name = "myemma_logger"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://myemma.io/"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google_cloud_logging = "0.1.0"
log = { version = "0.4.14", features = ["std"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.64"
yansi = "0.5.0"

[dependencies.myemma_backtrace]
path = "../myemma_backtrace"
version = "0.1.0"
