[package]
name = "myemma_panic_hook"
version = "0.1.0"
authors = ["Team Ferris <team_ferris@snelstart.nl>"]
license = "MIT OR Apache-2.0"
homepage = "https://myemma.io/"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4",  default-features = false, features = ["serde"] }
google_cloud_logging = { version = "0.1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
myemma_logger = { path = "../myemma_logger"}
myemma_backtrace = { path = "../myemma_backtrace"}