[package]
name = "myemma_rocket_options_fairing"
version = "0.1.0"
authors = ["Team Ferris <team_ferris@snelstart.nl>"]
license = "MIT OR Apache-2.0"
homepage = "https://myemma.io/"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3" }
